Changelog
=========

7.1-dev - (unreleased)
----------------------
* Feature: added a plone.app.contentrules action to enable/disable
  discussions based on rules
  [tiberich #14858]

7.0 - (2013-07-25)
------------------
* Feature: removed p4a.video dependency
  [ichimdav #15234]
* WIP: added a plone.app.contentrules action to enable/disable
  discussions based on rules
  [tiberich #14858]
* Bug fix: added adapter registration implementing IFeed for ICollection
  types, fixes /RSS2 view for feeds
  [tiberich #14915]
* Cleanup: Deprecated p4a.subtyper and remove hard dependency on it (
  is optional now and it will be removed in a later version of this pacakge)
  [voineali refs #15234]
* Bug fix: implemented a field2surf adapter for fields named 'provenances'. 
  This applies to DavizVisualization's @@rdf view.
  [tiberich #14824]
* Upgrade Step: in
  http://www.eea.europa.eu/aq_parent/portal_properties/rdfmarshaller_properties
  remove the "provenances" field from the "blacklist" list.
  [tiberich #14824]

6.9 - (2013-07-08)
------------------
* Bug fix: fixed duplication of auto relations when retriving them from a non
  canonical object
  [ichimdav refs #14831]

6.8 - (2013-06-17)
------------------
* Feature: added ManagementPlanField for content described in the ticket, such
  as IInteractiveData and IInteractiveMap
  [ichimdav #14719]
* Upgrade step: Within "Plone > Site setup > Add-ons" click on
  upgrade button available for EEA Content Types (be aware of previous upgrade
  steps that may require additional manual steps. If you're not sure about this,
  you can always run these steps from ZMI > portal_setup > Upgrades Tab and
  choose Products.EEAContentTypes:default)
  [voineali refs #14675]
* Bug fix: Fix content-rules for GIS Application and other EEA Content-Types
  by adding them to portal_factory
  [voineali refs #14675]
* Bug fix: added a possibility to simplify the schemata_edit form, to not